fix: note 8-byte compact header option (JEP 450, JDK 24+)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>